# JokesApp

./: README.md
jokes_app_backend/: .coveragerc  .flake8  .gitignore  Dockerfile  Jokes.json  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
jokes_app_backend/adapters/src/config/: __init__.py  api_config.py
jokes_app_backend/adapters/src/repositories/: __init__.py
jokes_app_backend/api/: __init__.py
jokes_app_backend/api/config/: env_config.py
jokes_app_backend/api/dtos/: __init__.py  chuck_norris_joke_dto.py  joke_api_dto.py  ninjas_joke_dto.py
jokes_app_backend/api/events/: __init__.py
jokes_app_backend/api/exceptions/: __init__.py  api_exceptions.py
jokes_app_backend/api/routers/: __init__.py  index.py
jokes_app_backend/api/routers/v1/: __init__.py  joke_router.py  joke_router_unit_test.py
jokes_app_backend/core/: __init__.py
jokes_app_backend/core/src/: __init__.py
jokes_app_backend/core/src/exceptions/: __init__.py
jokes_app_backend/core/src/models/: __init__.py  joke_model.py
jokes_app_backend/core/src/repository/: __init__.py  joke_repository.py
jokes_app_backend/core/src/use_cases/: __init__.py
jokes_app_backend/core/tests/factory/: joke.py
jokes_app_backend/core/tests/repository/: test_joke_repository.py
jokes_app_backend/factories/: __init__.py
jokes_app_backend/factories/config/: __init__.py  utils.py
jokes_app_backend/factories/repositories/: __init__.py  joke_repository_factory.py
jokes_app_backend/factories/use_cases/: __init__.py  joke_use_case_factory.py
jokes_app_frontend/: package-lock.json  (+1 more)
(+23 files in other folders)
